# midgard

./: .bumpversion.cfg  .gitignore  .project  Makefile  README.md  catalog-info.yaml  environment.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: codeql.yml
.security/: description.yaml
.sikkerhet/: beskrivelse.yaml
docs/: 404.html  index.html  sitemap.xml
docs/search/: search_index.json
midgard/: __init__.py
midgard/api/: transformation_api.py  water_level_api.py
midgard/collections/: enums.py  plate_motion_models.py
midgard/config/: __init__.py  config.py  files.py
midgard/data/: _h5utils.py  _position.py  _position_delta.py  _taiutc.txt  _time.py  _time_formats.py  _time_leapseconds.txt  _time_scales.py  collection.py  dataset.py  position.py  sigma.py  time.py
midgard/dev/: cache.py  console.py  exceptions.py  library.py  log.py  optional.py  plugins.py  profiler.py  timer.py  util.py
midgard/files/: dates.py  dependencies.py  files.py  url.py
midgard/gnss/: antenna.py  antenna_calibration.py  compute_dops.py  gnss.py  rec_velocity_est.py  solution_validation.py
midgard/ionosphere/: klobuchar.py
midgard/math/: constant.py  constant.txt  ellipsoid.py  interpolation.py  linear_regression.py  nputil.py  planetary_motion.py  plate_motion.py  rotation.py  spatial_interpolation.py  transformation.py  unit.py  unit.txt
midgard/parsers/: __init__.py  _parser.py  _parser_chain.py  _parser_line.py  _parser_rinex.py  _parser_sinex.py  antex.py  anubis.py  api_water_level_norway.py  bcecmp_sisre.py  bern_trop.py  bernese_clu.py  bernese_compar_out.py  bernese_crd.py  bernese_prc.py  bernese_slr_plt.py  bernese_sta.py  bernese_sta_v52.py  bernese_trp.py  cost.py  csv_.py  discontinuities_snx.py  doris_stcd.py  galileo_constellation_html.py  gamit_org.py  gipsy_stacov.py  gipsy_sum.py  gipsy_tdp.py  gipsyx_gdcov.py  gipsyx_residual.py  gipsyx_series.py  gipsyx_summary.py  gipsyx_tdp.py  glab_output.py  gnss_android_raw_data.py  gnss_antex.py  gnss_bernese_crd.py  gnss_galat_results.py  gnss_sinex_igs.py  gnssrefl_allrh.py  (+49 more)
midgard/plot/: matplotext.py  matplotlib_extension.py
midgard/site_info/: __init__.py  _site_info.py  antenna.py  eccentricity.py  identifier.py  receiver.py  site_coord.py  site_info.py
midgard/writers/: __init__.py  _writers.py  bernese_abb.py  bernese_clu.py  bernese_crd.py  bernese_sta.py  bernese_sta_v52.py  bernese_vel.py  csv_.py  gamit_apr_eq.py  gamit_station_info.py  gipsyx_site_info.py  report.py  sinex_tms.py
notebooks/: config.ipynb  dataset.ipynb  parsers.ipynb  plate_motion.ipynb  plugins.ipynb  position.ipynb  site_info.ipynb  time.ipynb  writers.ipynb
notebooks/api/: transformation_api.ipynb  water_level_api.ipynb
notebooks/dev/: config.ipynb  (+2 more)
website/: Makefile  mkdocs.yml  mkdocs.yml_template
website_tools/: generate_api.py  mkdocs.yml  mkdocs.yml_template
(+228 files in other folders)
