[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module             = "midgard"
author             = "Norwegian Mapping Authority"
author-email       = "geir.arne.hjelle@kartverket.no"
home-page          = "https://github.com/kartverket/midgard"
description-file   = "README.md"
classifiers        = ["Development Status :: 2 - Pre-Alpha",
                      "Intended Audience :: Developers",
                      "Intended Audience :: Science/Research",
                      "License :: OSI Approved :: MIT License",
                      "Natural Language :: English",
                      "Operating System :: MacOS",
                      "Operating System :: Microsoft",
                      "Operating System :: POSIX :: Linux",
                      "Programming Language :: Python :: 3.9",
                      "Topic :: Scientific/Engineering",
                      "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords           = "geodesy utilities"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# Requirements
requires-python    = ">=3.9"
requires           = ["dataclasses", "importlib_resources", "numpy", "pandas", "pint", "pycurl", "scipy", "statsmodels"]
dev-requires       = ["black", "bumpversion", "flit", "mkdocs", "mkdocs-bootswatch", "mypy", "pytest", "pytest-cov"]
